UX-3213: Tooltip overlap on modal fix

--- a/src/css/awinTheme.css
+++ b/src/css/awinTheme.css
@@ -5241,7 +5241,7 @@ Tooltip and popover
 
 .tooltip {
   position: absolute;
-  z-index: 30;
+  z-index: 11;
   display: block;
   font-size: 12px;
   font-style: normal;
